Fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -122,8 +122,18 @@
   height: 600px !important;
 }
 
+html,
+body {
+  overflow-x: hidden !important;
+}
+
 /* // X-Large devices (large desktops, less than 1400px) */
 @media (max-width: 1399.98px) {
+  html,
+  body {
+    overflow-x: hidden !important;
+  }
+
   button {
     font-size: 18px !important;
   }
