--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #002f47;
   color: #fff;
-  overflow-x: hidden;
 }
 
 button {
